--- a/styles/home.css
+++ b/styles/home.css
@@ -1,1 +1,49 @@
- 
+.content {
+  display: grid;
+  grid-template-columns: 60% 40%;
+  grid-template-rows: 11.4rem 1fr; /* distancia da parte de cima e divisão da parte de baixo e 1 fração respectivamente*/
+  grid-template-areas:
+    'header header'
+    'left right';
+}
+
+header {
+  grid-area: header;
+}
+
+#bg {
+  grid-area: left;
+  background: url('/assets/home-bg-img.svg') no-repeat top/contain; /*não repetir e colocar a imagem dentro do contain*/
+}
+
+main {
+  grid-area: right;
+
+  display: flex;
+  align-items: center;
+}
+
+main .container {
+  width: min(
+    36.3rem 100%
+  ); /* garantir que o elemento não vai fugir da tela ou quebrar a tela */
+}
+
+main h2 {
+  font-family: 'Poppins', sans-serif;
+  color: var(--black);
+  font-size: clamp(20px, 5vw, 2.8rem);
+  margin-bottom: 2.4rem;
+}
+
+input {
+  border: 0.2rem solid var(--grey-blue);
+  padding: 0 1.6rem;
+}
+
+input,
+button,
+.button {
+  width: 100%;
+  margin-bottom: 1.8rem;
+}
