--- a/styles/home.css
+++ b/styles/home.css
@@ -14,6 +14,7 @@ header {
 #bg {
   grid-area: left;
   background: url('/assets/home-bg-img.svg') no-repeat top/contain; /*não repetir e colocar a imagem dentro do contain*/
+  background-position-x: -10rem;
 }
 
 main {
@@ -21,11 +22,13 @@ main {
 
   display: flex;
   align-items: center;
+  margin-top: -12rem;
 }
 
 main .container {
   width: min(
-    36.3rem 100%
+    36.3rem,
+    100%
   ); /* garantir que o elemento não vai fugir da tela ou quebrar a tela */
 }
 
@@ -46,4 +49,50 @@ button,
 .button {
   width: 100%;
   margin-bottom: 1.8rem;
+}
+
+/* Separator Line*/
+
+.separator {
+  display: flex;
+  align-items: center;
+  margin: 4rem 0;
+}
+
+.separator div:nth-child(2) {
+  color: var(--grey-blue);
+  font-family: 'poppins', sans-serif;
+  font-weight: 400;
+  padding: 0 1.35rem;
+  line-height: 0;
+}
+
+.separator div:nth-child(1),
+.separator div:nth-child(3) {
+  background: var(--grey-blue);
+  width: 100%;
+  height: 1px;
+}
+
+/*** create balls ***/
+
+.ball {
+  width: 21.2rem;
+  height: 21.2rem;
+  background: var(--blue);
+  clip-path: circle();
+  position: fixed;
+  opacity: 0.1;
+}
+
+.ball.top {
+  top: -46rem;
+  width: 63.3rem;
+  right: -35rem;
+  height: 63.3rem;
+}
+
+.ball.bottom {
+  bottom: -15rem;
+  right: 5.6rem;
 }
