--- a/styles/room.css
+++ b/styles/room.css
@@ -1,8 +1,12 @@
+.content {
+  max-width: min(112rem, 90%);
+}
+
 #room header {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 #room header .buttons {
@@ -28,4 +32,116 @@
 #room header .buttons .button:nth-child(2) img {
   width: 2rem;
   height: 2rem;
+}
+
+/*** Question form ***/
+
+#question-form h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.8rem;
+  color: var(--black);
+  font-weight: 700;
+  line-height: 4.2rem;
+
+  margin-bottom: 2.4rem;
+}
+
+#question-form form {
+  border: 0.2rem solid var(--grey-blue);
+  padding: 1.6rem;
+  border-radius: 0 0.8rem 0.8rem 0.8rem;
+  margin-bottom: 1.6rem;
+}
+
+#question-form form textarea {
+  resize: none;
+  background: transparent;
+  width: 100%;
+  outline: none;
+}
+
+#question-form form textarea::placeholder {
+  color: var(--grey-blue);
+}
+
+#question-form form footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#question-form form footer > div {
+  display: flex;
+  align-items: center;
+  color: var(--icons-details);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+}
+
+#question-form form footer > div img {
+  margin-right: 0.9;
+}
+
+#question-form form footer button {
+  height: auto;
+  padding: 0.8rem 2.4rem;
+  line-height: 2.4rem;
+}
+
+/*** Questions***/
+
+.question-wrapper {
+  background: var(--light-blue);
+  margin-bottom: 0.8rem;
+  border-radius: 0 0.8rem 0.8rem 0.8rem;
+  padding: 2.4rem;
+}
+
+.question-wrapper .question-content {
+  display: flex;
+  align-items: flex-start; /*sempre deixar alinhado ao topo a figura com o texto*/
+}
+
+.question-wrapper .question-content .user {
+  background: var(--blue);
+  clip-path: circle();
+  padding: 1.4rem;
+}
+
+.question-wrapper .question-content p {
+  margin-left: 1.6rem;
+  word-break: break-word;
+  display: flex;
+  align-items: center;
+  min-height: 5.5rem; /***Se o tamanho do texto ultrapassar 5.5rem,a imagem não vai mais se alinhar ao centro e sim ao topo (como mostra na  linha de código 103***/
+}
+
+.question-wrapper .actions {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.question-wrapper .actions > a {
+  display: flex;
+  align-items: center;
+}
+
+.question-wrapper .actions > a img {
+  margin-right: 0.8rem;
+}
+
+.question-wrapper .actions > a:nth-child(2) {
+  /**Pode ser resolvido com o seguinte comando: .question-wrapper .actions > a + a **/
+  margin-left: 2.4rem;
+}
+
+/***Question read***/
+.question-wrapper.read {
+  background: var(--grey-read);
+}
+
+.question-wrapper.read .question-content .user {
+  background: var(--grey-blue);
 }
