--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -13,7 +13,7 @@ header {
 
 #bg {
   grid-area: left;
-  background: url('/assets/home-bg-img.svg') no-repeat top/contain; /*não repetir e colocar a imagem dentro do contain*/
+  background: url('/images/home-bg-img.svg') no-repeat top/contain; /*não repetir e colocar a imagem dentro do contain*/
   background-position-x: -10rem;
 }
 
