--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,1 +1,44 @@
-<p>oi</p>
+<!DOCTYPE html>
+  <head>
+      <title>Criar Sala - Rocket.Q</title>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-compatible" content="IE=edge">
+
+      <!-- view port -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+      <!-- CSS -->
+      <link rel="stylesheet" href="/styles/global.css">
+      <link rel="stylesheet" href="/styles/home.css">
+
+      <!-- FONTS  -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+  </head>
+  <body>
+    <div id="home" class="content">
+      <header>
+        <a href="/">
+
+          <img src="/images/logo.svg" alt="escrito rocket.q Logo"/>
+
+        </a>
+      </header>
+
+      <div id="bg">
+        <div class="ball top"></div>
+        <div class="ball bottom"></div>
+
+      </div>
+
+      <main>
+        <div class="container">
+        <!-- vai renderizar a parte correta de acordo com a url -->
+        <%- include(`parts/${page}`) %>
+        </div>
+     </main>
+    </div>
+  </body>
+</html>
