--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -8,9 +8,9 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
          <!-- CSS -->
-         <link rel="stylesheet" href="styles/global.css" />
-         <link rel="stylesheet" href="styles/room.css" />
-         <link rel="stylesheet" href="styles/modal.css" />
+         <link rel="stylesheet" href="/styles/global.css" />
+         <link rel="stylesheet" href="/styles/room.css" />
+         <link rel="stylesheet" href="/styles/modal.css" />
 
 
          <!-- FONTS  -->
@@ -20,21 +20,25 @@
                   href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap"
            rel="stylesheet"
          />
+
+         <!-- Script -->
+        <script src="/scripts/main.js" defer type="module"></script>
+
     </head>
     <body>
       <div id="room" class="content">
         <header>
-          <a href="#">
-            <img src="assets/logo.svg" alt="escrito rocket.q Logo"/>
+          <a href="/">
+            <img src="/images/logo.svg" alt="escrito rocket.q Logo"/>
           </a>
           <div class="buttons">
 
-           <div class="button outlined">
-             #323243
-             <img src="assets/copy.svg" alt="Copiar numero da sala">
+           <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+             #<%= roomId %>
+             <img src="/images/copy.svg" alt="Copiar numero da sala">
            </div> 
            <a href="#" class="button">
-             <img src="assets/users-white.svg" alt="Criar uma sala">
+             <img src="/images/users-white.svg" alt="Criar uma sala">
              Criar Sala
            </a>
           </div>
@@ -43,12 +47,12 @@
         <main>
     <section id="question-form">
        <h2>Faça sua pergunta</h2>
-       <form action="">
+       <form action="/question/create/<%= roomId %>" method="POST">
        <label class="sr-only" for-id="question">O que você quer perguntar?</label>
        <textarea name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
        <footer>
           <div>
-           <img src="assets/lock.svg" alt="cadeado">
+           <img src="/images/lock.svg" alt="cadeado">
            Esta pergunta é anônima
          </div>
         <button>Enviar</button>
@@ -61,19 +65,19 @@
          <div class="question-wrapper">
            <div class="question-content">
              <div class="user">
-               <img src="assets/user.svg" alt="Avatar">
+               <img src="/images/user.svg" alt="Avatar">
              </div>
              <div class="question">
                <p>Qual a diferença entre const, var e let no javaScript?</p>
              </div>
            </div>
            <div class="actions">
-             <a href="#" class="check">
-               <img src="assets/check.svg" alt="Marcar como lida">
+             <a href="#" class="check" data-id="2">
+               <img src="/images/check.svg" alt="Marcar como lida">
                Marcar como lida
              </a>
-             <a href="#" class="delete">
-               <img src="assets/trash.svg" alt="Excluir">
+             <a href="#" class="delete" data-id="2">
+               <img src="/images/trash.svg" alt="Excluir">
                Excluir
              </a>
            </div>
@@ -81,19 +85,19 @@
          <div class="question-wrapper">
           <div class="question-content">
             <div class="user">
-              <img src="assets/user.svg" alt="Avatar">
+              <img src="/images/user.svg" alt="Avatar">
             </div>
             <div class="question">
-              <p>O que é Typescript</p>
+              <p>O que é JavaScript</p>
             </div>
           </div>
           <div class="actions">
-            <a href="#" class="check">
-              <img src="assets/check.svg" alt="Marcar como lida">
+            <a href="#" class="check" data-id="3">
+              <img src="/images/check.svg" alt="Marcar como lida">
               Marcar como lida
             </a>
-            <a href="#" class="delete">
-              <img src="assets/trash.svg" alt="Excluir">
+            <a href="#" class="delete" data-id="3">
+              <img src="/images/trash.svg" alt="Excluir">
               Excluir
             </a>
           </div>
@@ -101,7 +105,7 @@
         <div class="question-wrapper">
           <div class="question-content">
             <div class="user">
-              <img src="assets/user.svg" alt="Avatar">
+              <img src="/images/user.svg" alt="Avatar">
             </div>
             <div class="question">
               <p>Você já sabe quais bases você precisa melhorar para alcançar o seu próximo nível? Definiu o seu foco e objetivo para seguir em frente? Estou curiosa e embasbacada com sua perseverança por ter alcançado a terceira aula e sei que vai continuar até o fim,então responde ai pra gente!!
@@ -109,12 +113,12 @@
             </div>
           </div>
           <div class="actions">
-            <a href="#" class="check">
-              <img src="assets/check.svg" alt="Marcar como lida">
+            <a href="#" class="check" data-id="4">
+              <img src="/images/check.svg" alt="Marcar como lida">
               Marcar como lida
             </a>
-            <a href="#" class="delete">
-              <img src="assets/trash.svg" alt="Excluir">
+            <a href="#" class="delete" data-id="4">
+              <img src="/images/trash.svg" alt="Excluir">
               Excluir
             </a>
           </div>
@@ -122,16 +126,16 @@
         <div class="question-wrapper read">
           <div class="question-content">
             <div class="user">
-              <img src="assets/user.svg" alt="Avatar">
+              <img src="/images/user.svg" alt="Avatar">
             </div>
             <div class="question">
-              <p>O que é JavaScript</p>
+              <p>O que é Script</p>
             </div>
           </div>
           <div class="actions">
          
-            <a href="#" class="delete">
-              <img src="assets/trash.svg" alt="Excluir">
+            <a href="#" class="delete" data-id="1">
+              <img src="/images/trash.svg" alt="Excluir">
               Excluir
             </a>
 
@@ -143,16 +147,16 @@
       </div>
 
       <!-- Modal -->
-      <div class="modal-wrapper ">
+      <div class="modal-wrapper">
         <div class="modal">
           <h2>Excluir Pergunta</h2>
-          <p>Tem certeza que vc deseja exclir esta pergunta?</p>
+          <p>Tem certeza que vc deseja excluir esta pergunta?</p>
 
-          <form action="#">
+          <form action="#" method="POST">
             <label class="sr-only" for-id="password">Digite sua senha admin</label>
             <input type="password" id="password" name="password" placeholder="Digite sua senha">
             <div class="buttons">
-              <div class="button grey">Cancelar</div>
+              <div class="button grey cancel">Cancelar</div>
               <button class="red">Sim, Excluir</button>
             </div>
           </form>
