--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -37,7 +37,7 @@
              #<%= roomId %>
              <img src="/images/copy.svg" alt="Copiar numero da sala">
            </div> 
-           <a href="#" class="button">
+           <a href="/create-pass" class="button">
              <img src="/images/users-white.svg" alt="Criar uma sala">
              Criar Sala
            </a>
@@ -62,85 +62,59 @@
     <section id="questions">
        <h2 class="sr-only">Perguntas da comunidade</h2>
        <div class="questions">
-         <div class="question-wrapper">
-           <div class="question-content">
-             <div class="user">
-               <img src="/images/user.svg" alt="Avatar">
-             </div>
-             <div class="question">
-               <p>Qual a diferença entre const, var e let no javaScript?</p>
-             </div>
-           </div>
-           <div class="actions">
-             <a href="#" class="check" data-id="2">
-               <img src="/images/check.svg" alt="Marcar como lida">
-               Marcar como lida
-             </a>
-             <a href="#" class="delete" data-id="2">
-               <img src="/images/trash.svg" alt="Excluir">
-               Excluir
-             </a>
-           </div>
-         </div>
-         <div class="question-wrapper">
-          <div class="question-content">
-            <div class="user">
-              <img src="/images/user.svg" alt="Avatar">
-            </div>
-            <div class="question">
-              <p>O que é JavaScript</p>
-            </div>
-          </div>
-          <div class="actions">
-            <a href="#" class="check" data-id="3">
-              <img src="/images/check.svg" alt="Marcar como lida">
-              Marcar como lida
-            </a>
-            <a href="#" class="delete" data-id="3">
-              <img src="/images/trash.svg" alt="Excluir">
-              Excluir
-            </a>
-          </div>
-        </div>
+
+        <% if (isNoQuestions){ %>
+           <%- include('parts/no-question') %>
+
+        <% } %>
+
+       <% questions.forEach(question => { %>
+         
         <div class="question-wrapper">
           <div class="question-content">
             <div class="user">
               <img src="/images/user.svg" alt="Avatar">
             </div>
             <div class="question">
-              <p>Você já sabe quais bases você precisa melhorar para alcançar o seu próximo nível? Definiu o seu foco e objetivo para seguir em frente? Estou curiosa e embasbacada com sua perseverança por ter alcançado a terceira aula e sei que vai continuar até o fim,então responde ai pra gente!!
-              </p>
+              <p><%= question.title %></p>
             </div>
           </div>
           <div class="actions">
-            <a href="#" class="check" data-id="4">
+            <a href="#" class="check" data-id="<%= question.id %>">
               <img src="/images/check.svg" alt="Marcar como lida">
               Marcar como lida
             </a>
-            <a href="#" class="delete" data-id="4">
+            <a href="#" class="delete" data-id="<%= question.id %>">
               <img src="/images/trash.svg" alt="Excluir">
               Excluir
             </a>
           </div>
         </div>
+       <% }); %>
+
+
+       <% questionsRead.forEach(questionRead => { %>
         <div class="question-wrapper read">
           <div class="question-content">
             <div class="user">
               <img src="/images/user.svg" alt="Avatar">
             </div>
             <div class="question">
-              <p>O que é Script</p>
+              <p><%= questionRead.title %></p>
             </div>
           </div>
           <div class="actions">
          
-            <a href="#" class="delete" data-id="1">
+            <a href="#" class="delete" data-id="<%= questionRead.id %>">
               <img src="/images/trash.svg" alt="Excluir">
               Excluir
             </a>
 
           </div>
         </div>
+       <% }); %>
+
+       
        </div>
     </section>
         </main>
